--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -65,31 +65,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[1.4630630016326904] Load Data start\n",
+      "INFO:profiler.utility:[0.009931802749633789] Load Data start\n",
       "\n",
       "INFO:profiler.data.dataset:parameters used for data loading:\n",
       " {'na_values': 'empty', 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
-      "WARNING:profiler.data.dataset:Dropping the following null column from the dataset: 'c_comment'\n",
+      "WARNING:profiler.data.dataset:Dropping the following null column from the dataset: 'Address2'\n",
+      "WARNING:profiler.data.dataset:Dropping the following null column from the dataset: 'Address3'\n",
       "INFO:profiler.data.dataset:inferred types of attributes: {\n",
-      "    \"c_custkey\": \"text\",\n",
-      "    \"c_name\": \"text\",\n",
-      "    \"c_address\": \"numeric\",\n",
-      "    \"c_nationkey\": \"text\",\n",
-      "    \"c_phone\": \"numeric\",\n",
-      "    \"c_acctbal\": \"categorical\",\n",
-      "    \"c_mktsegment\": \"text\"\n",
+      "    \"ProviderNumber\": \"text\",\n",
+      "    \"HospitalName\": \"text\",\n",
+      "    \"Address1\": \"text\",\n",
+      "    \"City\": \"text\",\n",
+      "    \"State\": \"categorical\",\n",
+      "    \"ZipCode\": \"text\",\n",
+      "    \"CountyName\": \"text\",\n",
+      "    \"PhoneNumber\": \"text\",\n",
+      "    \"HospitalType\": \"text\",\n",
+      "    \"HospitalOwner\": \"text\",\n",
+      "    \"EmergencyService\": \"categorical\",\n",
+      "    \"Condition\": \"text\",\n",
+      "    \"MeasureCode\": \"text\",\n",
+      "    \"MeasureName\": \"text\",\n",
+      "    \"Score\": \"text\",\n",
+      "    \"Sample\": \"text\",\n",
+      "    \"Stateavg\": \"text\"\n",
       "}\n",
       "INFO:profiler.data.dataset:(possible types: numeric, categorical, text, date)\n",
-      "INFO:profiler.data.dataset:inferred operators of attributes: {'c_custkey': ['equal'], 'c_name': ['equal'], 'c_address': ['equal'], 'c_nationkey': ['equal'], 'c_phone': ['equal'], 'c_acctbal': ['equal'], 'c_mktsegment': ['equal']}\n",
+      "INFO:profiler.data.dataset:inferred operators of attributes: {'ProviderNumber': ['equal'], 'HospitalName': ['equal'], 'Address1': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZipCode': ['equal'], 'CountyName': ['equal'], 'PhoneNumber': ['equal'], 'HospitalType': ['equal'], 'HospitalOwner': ['equal'], 'EmergencyService': ['equal'], 'Condition': ['equal'], 'MeasureCode': ['equal'], 'MeasureName': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Stateavg': ['equal']}\n",
       "INFO:profiler.data.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[4.043230772018433] Load Data execution time: 2.580167770385742\n",
+      "INFO:profiler.utility:[0.11717534065246582] Load Data execution time: 0.10724353790283203\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# pf.session.load_data(name='hospital', src=FILE, fpath='data/hospital_clean_unflatten.csv', check_param=True, na_values='empty')\n",
-    "pf.session.load_data(name='customer', src=FILE, fpath='data/customer.csv', check_param=True, na_values='empty')"
+    "pf.session.load_data(name='customer', src=FILE, fpath='data/hospital.csv', check_param=True, na_values='empty')"
    ]
   },
   {
@@ -110,14 +121,39 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:profiler.data.dataset:updated types of ProviderNumber to 'categorical'\n",
+      "INFO:profiler.data.dataset:updated operators of ProviderNumber to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of ZipCode to 'numeric'\n",
+      "INFO:profiler.data.dataset:updated operators of ZipCode to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of PhoneNumber to 'categorical'\n",
+      "INFO:profiler.data.dataset:updated operators of PhoneNumber to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of State to 'text'\n",
+      "INFO:profiler.data.dataset:updated operators of State to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of EmergencyService to 'text'\n",
+      "INFO:profiler.data.dataset:updated operators of EmergencyService to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of Score to 'numeric'\n",
+      "INFO:profiler.data.dataset:updated operators of Score to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of Sample to 'numeric'\n",
+      "INFO:profiler.data.dataset:updated operators of Sample to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of HospitalType to 'text'\n",
+      "INFO:profiler.data.dataset:updated operators of HospitalType to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of HospitalOwner to 'text'\n",
+      "INFO:profiler.data.dataset:updated operators of HospitalOwner to ['equal']\n",
+      "INFO:profiler.data.dataset:updated types of Condition to 'text'\n",
+      "INFO:profiler.data.dataset:updated operators of Condition to ['equal']\n",
+      "INFO:profiler.data.dataset:updated inferred operators of attributes: {'ProviderNumber': ['equal'], 'HospitalName': ['equal'], 'Address1': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZipCode': ['equal'], 'CountyName': ['equal'], 'PhoneNumber': ['equal'], 'HospitalType': ['equal'], 'HospitalOwner': ['equal'], 'EmergencyService': ['equal'], 'Condition': ['equal'], 'MeasureCode': ['equal'], 'MeasureName': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Stateavg': ['equal']}\n"
+     ]
+    }
+   ],
    "source": [
-    "# pf.session.change_dtypes(['ProviderNumber', 'ZipCode', 'PhoneNumber', 'State', 'EmergencyService','Score', 'Sample','HospitalType','HospitalOwner', 'Condition'], \n",
-    "#                             [CATEGORICAL, NUMERIC, CATEGORICAL, TEXT, TEXT, NUMERIC, NUMERIC, TEXT,TEXT, TEXT],\n",
-    "#                             [None, None, None, None, None, r'(\\d+)%', r'(\\d+)\\spatients', None, None,None])\n",
-    "# # pf.session.change_dtypes(['ProviderNumber', 'ZipCode', 'PhoneNumber', 'State', 'EmergencyService','Score', 'Sample'], \n",
-    "# #                             [CATEGORICAL, CATEGORICAL, CATEGORICAL, TEXT, TEXT, NUMERIC, NUMERIC],\n",
-    "# #                             [None, None, None, None, None, r'(\\d+)%', r'(\\d+)\\spatients'])"
+    "pf.session.change_dtypes(['ProviderNumber', 'ZipCode', 'PhoneNumber', 'State', 'EmergencyService','Score', 'Sample','HospitalType','HospitalOwner', 'Condition'], \n",
+    "                            [CATEGORICAL, NUMERIC, CATEGORICAL, TEXT, TEXT, NUMERIC, NUMERIC, TEXT,TEXT, TEXT],\n",
+    "                            [None, None, None, None, None, r'(\\d+)%', r'(\\d+)\\spatients', None, None,None])"
    ]
   },
   {
@@ -132,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -142,15 +178,70 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[6.719313144683838] Load Embedding start\n",
+      "INFO:profiler.utility:[24.145376205444336] Load Embedding start\n",
       "\n",
-      "INFO:profiler.utility:[12.683650970458984] Load Embedding execution time: 5.9643378257751465\n",
-      "\n"
+      "INFO:profiler.data.embedding:[HospitalName] tokenize cell\n",
+      "INFO:profiler.data.embedding:[Address1] tokenize cell\n",
+      "INFO:profiler.data.embedding:[HospitalName] train language model\n",
+      "INFO:profiler.data.embedding:[Address1] train language model\n",
+      "INFO:profiler.data.embedding:[HospitalName] compute weights\n",
+      "INFO:profiler.data.embedding:[HospitalName] create vector map\n",
+      "INFO:profiler.data.embedding:[HospitalName] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[City] tokenize cell\n",
+      "INFO:profiler.data.embedding:[City] train language model\n",
+      "INFO:profiler.data.embedding:[Address1] compute weights\n",
+      "INFO:profiler.data.embedding:[Address1] create vector map\n",
+      "INFO:profiler.data.embedding:[Address1] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[State] tokenize cell\n",
+      "INFO:profiler.data.embedding:[State] train language model\n",
+      "INFO:profiler.data.embedding:[City] compute weights\n",
+      "INFO:profiler.data.embedding:[City] create vector map\n",
+      "INFO:profiler.data.embedding:[City] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[CountyName] tokenize cell\n",
+      "INFO:profiler.data.embedding:[CountyName] train language model\n",
+      "INFO:profiler.data.embedding:[State] compute weights\n",
+      "INFO:profiler.data.embedding:[State] create vector map\n",
+      "INFO:profiler.data.embedding:[State] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[HospitalType] tokenize cell\n",
+      "INFO:profiler.data.embedding:[HospitalType] train language model\n",
+      "INFO:profiler.data.embedding:[CountyName] compute weights\n",
+      "INFO:profiler.data.embedding:[CountyName] create vector map\n",
+      "INFO:profiler.data.embedding:[CountyName] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[HospitalOwner] tokenize cell\n",
+      "INFO:profiler.data.embedding:[HospitalOwner] train language model\n",
+      "INFO:profiler.data.embedding:[HospitalType] compute weights\n",
+      "INFO:profiler.data.embedding:[HospitalType] create vector map\n",
+      "INFO:profiler.data.embedding:[HospitalType] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[EmergencyService] tokenize cell\n",
+      "INFO:profiler.data.embedding:[EmergencyService] train language model\n",
+      "INFO:profiler.data.embedding:[HospitalOwner] compute weights\n",
+      "INFO:profiler.data.embedding:[HospitalOwner] create vector map\n",
+      "INFO:profiler.data.embedding:[HospitalOwner] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[Condition] tokenize cell\n",
+      "INFO:profiler.data.embedding:[Condition] train language model\n",
+      "INFO:profiler.data.embedding:[EmergencyService] compute weights\n",
+      "INFO:profiler.data.embedding:[EmergencyService] create vector map\n",
+      "INFO:profiler.data.embedding:[EmergencyService] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[MeasureCode] tokenize cell\n",
+      "INFO:profiler.data.embedding:[MeasureCode] train language model\n",
+      "INFO:profiler.data.embedding:[Condition] compute weights\n",
+      "INFO:profiler.data.embedding:[Condition] create vector map\n",
+      "INFO:profiler.data.embedding:[Condition] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[MeasureName] tokenize cell\n",
+      "INFO:profiler.data.embedding:[MeasureName] train language model\n",
+      "INFO:profiler.data.embedding:[MeasureCode] compute weights\n",
+      "INFO:profiler.data.embedding:[MeasureCode] create vector map\n",
+      "INFO:profiler.data.embedding:[MeasureCode] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[Stateavg] tokenize cell\n",
+      "INFO:profiler.data.embedding:[Stateavg] train language model\n",
+      "INFO:profiler.data.embedding:[MeasureName] compute weights\n",
+      "INFO:profiler.data.embedding:[MeasureName] create vector map\n",
+      "INFO:profiler.data.embedding:[MeasureName] save vec and vocab\n"
      ]
     }
    ],
    "source": [
-    "pf.session.load_embedding(save=True, path='data/', load=True)"
+    "pf.session.load_embedding(save=True, path='data/', load=False)"
    ]
   },
   {
