--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -236,7 +236,12 @@
       "INFO:profiler.data.embedding:[Stateavg] train language model\n",
       "INFO:profiler.data.embedding:[MeasureName] compute weights\n",
       "INFO:profiler.data.embedding:[MeasureName] create vector map\n",
-      "INFO:profiler.data.embedding:[MeasureName] save vec and vocab\n"
+      "INFO:profiler.data.embedding:[MeasureName] save vec and vocab\n",
+      "INFO:profiler.data.embedding:[Stateavg] compute weights\n",
+      "INFO:profiler.data.embedding:[Stateavg] create vector map\n",
+      "INFO:profiler.data.embedding:[Stateavg] save vec and vocab\n",
+      "INFO:profiler.utility:[280.13637924194336] Load Embedding execution time: 255.99100303649902\n",
+      "\n"
      ]
     }
    ],
